--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 body {
-	// background:url('./Image/bg.jpg') no-repeat 0% 87% fixed;
+	background:url('./Image/bg.jpg') no-repeat 0% 87% fixed;
 	background-color: grey;
     background-size: cover;
 	font-family: 'Lato', sans-serif;
